--- a/agriculture_management_app/pubspec.yaml
+++ b/agriculture_management_app/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   google_fonts: ^6.1.0
   
   # State Management
-  provider: ^6.1.1
+  provider: ^6.1.5+1
   
   # Veritabanı ve Depolama
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.3
   
   # HTTP ve API
   http: ^1.1.2
